# core-topo-gen

./: .gitignore  API.md  CHANGELOG.md  MIGRATION.md  Makefile  README.md  SCENARIO_XML_SCHEMA.md  TODO  TODO_VS_CTF-GEN.rtf  config2scen_core_grpc.py  core_details.html  createXmlV2.py  debug_revalidate_path_logic.py  docker-compose.yml  main.py  myscenario.xml  myscenarios.xml  network_builder.py  parse_scenarios.py  prompt_sample_context_generator.txt  pyproject.toml  reproduce_goal_facts.py  reproduce_issue.py  requirements.txt  sample.xml  sample.yml  sample_config_1scen.xml  sample_config_2scen.xml  scenarios.xml  sync.sh  temp_check.js  test_feasibility.js  tmp_scenario.xml  verify_goal_facts_persistence.py  web_gui.py
.github/: copilot-instructions.md
MCP/: README.md  mcp-bridge-servers.json  server.py
archive/: basic_core_structure.py  config2scen_core_grpc.py  createXmlV2.py  gui_rough_draft.py  scenario_config.json  user_inputs.rtf  web_gui.py
core_topo_gen/: __init__.py  cli.py  constants.py  generator_manifests.py  types.py
data_sources/: _state.json
difficulty_analysis/: assignment.docx
docs/: AI_GENERATOR_WORKFLOW.md  AI_PROMPT_TEMPLATES.md  ARCHITECTURE_OVERVIEW.md  CNAME  FEATURE_DEEP_DIVE.md  FLAG_GENERATORS.md  GENERATOR_AUTHORING.md  QUICK_START.md  README.md  RESTRICTIONS_LIMITATIONS.md  TROUBLESHOOTING.md  openapi.yaml  screenshots.md
envoy/: envoy.yaml
flag_generators/: README.md
generator_templates/: README.md
gui/: editor.py  main_window.py
llamaboard_cache/: user_config.yaml
new-schema/: example_node_web_backup.yaml
nginx/: nginx-hostweb.conf  nginx-http.conf  nginx.conf
raw_datasources/: vuln_list.csv  vuln_list_w_url.csv
screenshots/: 1.AI-ScenarioGeneration-Setup and Prompt.heic  2AI-Scenario Generation MCP Tools Dialog.heic  3.Scenario Configuration Manual Fine Tune.heic  4.ChallengeChain-AttackFlow.heic  (+5 more)
(+460 files in other folders)
